video working, attempting to implement vibration

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "15.1.0",
     "react-native": "0.28.0",
     "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
-    "react-native-proximity": "^0.1.1"
+    "react-native-proximity": "^0.1.1",
+    "react-native-vibration": "^0.2.0"
   }
 }
